--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -13,7 +13,7 @@
   white-space: nowrap;
   overflow: hidden;
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: 10px;
   font-weight: normal;
 }
 
