--- a/src/views/main/notes/note_info_dialog/styles.css
+++ b/src/views/main/notes/note_info_dialog/styles.css
@@ -56,3 +56,8 @@
 .note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root svg {
   fill: var(--light-color);
 }
+
+.note_info_dialog__delete_icon svg {
+  width: 1.2rem;
+  height: 1.2rem;
+}
