--- a/src/views/main/glossary/glossary_items/styles.css
+++ b/src/views/main/glossary/glossary_items/styles.css
@@ -3,6 +3,7 @@
   height: calc(100% - 60px);
   width: 100%;
   overflow-y: auto;
+  color:var(--contrast-color)
 }
 
 .accordion {
@@ -13,6 +14,14 @@
   margin-bottom: 0.2rem;
 }
 
-.accordion .card .card-link {
-  color: var(--button-font-color);
+.glossary__items .card.card {
+  background-color: var(--inv-ontrast-color);
+}
+
+.glossary__items .card-body .card-subtitle {
+  color: var(--selection);
+}
+
+.glossary__items .card-body .card-link {
+  color: var(--selection);
 }
