--- a/src/views/main/glossary/glossary_item/styles.css
+++ b/src/views/main/glossary/glossary_item/styles.css
@@ -19,7 +19,7 @@
 }
 
 .glossary-item .card__typography {
-  font-size: 1rem;
+  font-size: var(--default-font);
   font-weight: 400;
   line-height: 1.5;
   letter-spacing: 0.00938em;
