--- a/src/views/main/faq/faq_items/styles.css
+++ b/src/views/main/faq/faq_items/styles.css
@@ -6,6 +6,11 @@
   margin: 5px 5px 10px;
 }
 
+.faq-items__title p {
+  font-size: var(--default-font);
+}
+
 .faq-items__accordion {
   padding: 0px;
 }
+
