--- a/src/views/main/faq/styles.css
+++ b/src/views/main/faq/styles.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: calc(100% - 60px);
   overflow-y: auto;
+  font-size: var(--default-font);
 }
 
 .select-faq__button {
@@ -35,4 +36,8 @@
 .select_faq_button {
   margin: auto;
   margin-top: 50%;
+}
+
+.card-header .MuiTypography-body1 {
+  font-size: var(--default-font);
 }
