--- a/src/views/main/glossary/glossary_items/styles.css
+++ b/src/views/main/glossary/glossary_items/styles.css
@@ -3,6 +3,7 @@
   height: calc(100% - 60px);
   width: 100%;
   overflow-y: auto;
+  font-size: var(--default-font);
 }
 
 .accordion {
@@ -15,4 +16,12 @@
 
 .accordion .card .card-link {
   color: var(--button-font-color);
+}
+
+.glossary__items .h5{
+  font-size: var(--big-font);
+}
+
+.glossary__items .h6 {
+  font-size: var(--default-font);
 }
