--- a/src/views/main/notes/content/column/header/styles.css
+++ b/src/views/main/notes/content/column/header/styles.css
@@ -33,8 +33,8 @@
 
 .note__note_content__column__column_header__button_div__button svg {
   fill: var(--column-border);
-  height: 18px;
-  width: 18px;
+  height: var(--svg-size);
+  width: var(--svg-size);
   margin-left: auto;
   margin-right: 0;
 }
