--- a/src/components/google_grant_dialog/styles.css
+++ b/src/components/google_grant_dialog/styles.css
@@ -1,32 +1,3 @@
-.google_grant_dialog__header {
-  background-color: var(--header-and-menu);
-  color: var(--inv-contrast-color);
-  display: flex;
-  flex-direction: row;
-  padding: 1rem;
-}
-
-.google_grant_dialog__header svg {
-  margin-left: auto;
-  width: 4rem;
-}
-
-.google_grant_dialog__header__title {
-  display: flex;
-  align-items: center;
-  margin-right: 8px;
-}
-
-.google_grant_dialog__header__title h1 {
-  font-size: 1.25rem;
-  margin: 0;
-}
-
-.google_grant_dialog__content {
-  padding: 1rem;
-  padding-bottom: 0;
-}
-
 .google_grant_dialog__buttons {
   margin-left: auto;
   padding: 0.5rem;
@@ -37,7 +8,9 @@
   margin-left: 0.5rem;
 }
 
-.google_grant_dialog__buttons__accept_button.MuiButtonBase-root
+/* .google_grant_dialog__buttons__accept_button.MuiButtonBase-root
   .MuiButton-label {
-  color: var(--inv-contrast-color);
+    color: var(--inv-contrast-color); 
 }
+ 
+*/
