--- a/src/views/main/settings/select_faq/styles.css
+++ b/src/views/main/settings/select_faq/styles.css
@@ -3,3 +3,11 @@
 .select-faq__autocomplete .MuiFormLabel-root {
   font-family: inherit;
 }
+
+.select-faq__autocomplete {
+  width: 100%;
+}
+
+.select-faq__children {
+  margin: 28px 0px 0px;
+}
