--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -1,17 +1,18 @@
 .settings {
   display: flex;
   flex-direction: column;
-  padding-top: 20px;
-  padding-right: 20px;
-  padding-left: 20px;
-  padding-bottom: 50px;
+  padding: 20px 20px 50px;
   min-height: 100%;
 }
 
-.settings__form {
+.settings .dino_hr {
+  margin: 5px 20px;
+}
+
+.settings .settings__form {
   align-self: center;
   width: 90%;
-  margin-bottom: 20px !important;
+  margin: 10px 0px;
 }
 
 .settings__title {
@@ -53,28 +54,3 @@
   margin-bottom: 40px;
 }
 
-.settings__grant {
-  width: 100%;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.settings__grant p {
-  margin: 0;
-}
-
-.settings__grant__switch {
-  margin-left: auto;
-}
-
-.settings__grant__switch .MuiSwitch-track {
-  height: 18px;
-  border-radius: 18px;
-}
-
-.MuiSwitch-root.settings__grant__switch {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
