--- a/src/views/main/contacts/contact_dialog_form/content/styles.css
+++ b/src/views/main/contacts/contact_dialog_form/content/styles.css
@@ -1,4 +1,4 @@
-.dialog-form__content .add-phone__button {
+.dialog_form__content .add-phone__button {
   justify-content: center;
   width: 100%;
 }
