--- a/src/views/main/contacts/contact_dialog_form/styles.css
+++ b/src/views/main/contacts/contact_dialog_form/styles.css
@@ -1,8 +1,8 @@
-.contact-form .MuiDialog-paper {
+.contact_form .MuiDialog-paper {
   margin: 20px;
 }
 
-.dialog-form__content
+.dialog_form__content
   .MuiFormHelperText-root.Mui-error.MuiFormHelperText-filled {
   overflow: hidden;
   text-overflow: ellipsis;
