Feat(Terms Of Use & Priv. Policy Changes)
botei o arrowback nesses componentes e mudei as magnitudes dos títulos no css pra não confundir as search engines

--- a/src/views/privacy_policy/styles.css
+++ b/src/views/privacy_policy/styles.css
@@ -1,11 +1,8 @@
 .privacy_policy {
   font-family: var(--font-base);
   font-size: 14px;
-  text-align: justify;
-
   background-color: var(--background-main);
   color: var(--base-font-color);
-
   width: 100%;
   height: 100%;
   padding: 30px;
@@ -13,33 +10,27 @@
   overflow-x: hidden;
 }
 
-.privacy_policy h1 {
-  font-size: 40px;
-  font-weight: bold;
-  text-align: center;
-  margin-bottom: 5px;
+.privacy_policy .arrow-back {
+  padding: 0px;
+  margin-bottom: 10px;
+}
+
+.privacy_policy .icon_button.arrow-back svg {
+  fill: var(--contrast-color);
 }
 
 .privacy_policy h2 {
-  font-size: 18px;
   font-weight: 600;
-  margin: 30px 0px 15px 0px;
+  margin: 20px 0px 15px 0px;
 }
 
-.privacy_policy h3 {
-  font-size: 16px;
-  font-style: italic;
-  margin: 20px 0px 10px 0px;
-}
-
-.privacy_policy h4 {
-  font-size: 14px;
-  font-style: italic;
+.privacy_policy h5 {
   margin: 15px 0px 10px 0px;
   color: #636363;
 }
 
 .privacy_policy p {
+  text-align: justify;
   margin: 10px 0px;
 }
 
