Feat(LinkButton Component): button on Menu for ToU and Priv. Pol.

--- a/src/Var.css
+++ b/src/Var.css
@@ -79,8 +79,8 @@
   --note-answer-background: #A692AE;
 
   /* Botoes */
-  --button-font-color: #442950;
-  --button-selected-font-color: #b054d1;
+  --button-font-color: #b054d1;
+  --button-selected-font-color: #694e73;
 
   /* Outros */
   --contrast-color: #f5f5f5;
