Feat(GoogleScope): Modificação para salvar scopos de autenticação do Google

--- a/src/components/drawer_navigation/content/styles.css
+++ b/src/components/drawer_navigation/content/styles.css
@@ -13,6 +13,7 @@
 
 .drawer__navigation__content__component__scrollable {
   height: 100%;
+  overflow: auto;
 }
 
 .drawer__navigation__content__app_bar {
