--- a/src/components/switch/styles.css
+++ b/src/components/switch/styles.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  font-size: var(--default-small-font);
 }
 
 .dino_switch__form p {
