--- a/src/components/google_grant_dialog/styles.css
+++ b/src/components/google_grant_dialog/styles.css
@@ -1,3 +1,11 @@
+.google_grant_dialog p {
+  font-size: var(--default-small-font);
+}
+
+.google_grant_dialog h1 {
+  font-size: var(--big-font);
+}
+
 .google_grant_dialog__buttons {
   margin-left: auto;
   padding: 0.5rem;
