--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -1,8 +1,7 @@
 .settings {
   display: flex;
   flex-direction: column;
-  padding: 20px 20px 50px;
-  min-height: 100%;
+  padding: 20px 20px;
 }
 
 .settings .dino_hr {
