--- a/src/Var.css
+++ b/src/Var.css
@@ -18,6 +18,7 @@
   /* Fundos */
   --login-background: #694e73;
   --background-main: #f5f5f5;
+  --horizontal-menu-item: #688478;
 
   /* Fontes */
   --base-font-color: #121212;
@@ -52,7 +53,6 @@
   --avatar-color-3: #9c27b0;
   --avatar-color-4: #2196f3;
   --avatar-color-5: #4caf50;
-  --light-color: #f5f5f5;
   --tag-color: #d1a300;
 }
 
@@ -60,6 +60,7 @@
   /* Fundos */
   --login-background: #2f2e2c;
   --background-main: #2f2e2c;
+  --horizontal-menu-item: #C2AE64;
 
   /* Fontes */
   --base-font-color: #f5f5f5;
@@ -99,6 +100,7 @@
   /* Fundos */
   --login-background: #694e73;
   --background-main: #f5f5f5;
+  --horizontal-menu-item: #E3C660;
 
   /* Fontes */
   --base-font-color: #121212;
