--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -55,6 +55,25 @@
   opacity: 0.7;
 }
 
+.home .info__grid {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 24px 24px 0px;
+  grid-gap: 0px 24px;
+}
+
+.info__grid__item {
+  width: 100%;
+  height: 2rem;
+  background-color: var(--horizontal-menu-item);
+  font-size: var(--big-font); 
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 1rem;
+  border-radius: 0.5rem;
+}
+
 @media (orientation: landscape) {
   .home .home__avatar {
     margin-top: 40px;
