--- a/src/views/main/contacts/contact_list_item/styles.css
+++ b/src/views/main/contacts/contact_list_item/styles.css
@@ -3,6 +3,7 @@
   text-overflow: ellipsis;
   overflow: hidden;
   text-align: justify;
+  font-size: var(--small-font);
 }
 
 .MuiListItemSecondaryAction-root {
