--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,13 @@ body .MuiInputBase-root {
   font-size: var(--default-font);
 }
 
+body .MuiListItemText-root .MuiTypography-body1 {
+  font-size: var(--default-font);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 body .MuiFormLabel-root {
   font-size: var(--default-font);
   white-space: nowrap;
@@ -21,7 +28,11 @@ body .MuiFormLabel-root {
   text-overflow: ellipsis;
 }
 
-body .MuiFormControl-root.MuiTextField-root.MuiFormControl-fullWidth {
+body .MuiFormControl-root.MuiTextField-root {
+  overflow: hidden;
+}
+
+body .PrivateNotchedOutline-legendLabelled-3 span {
   overflow: hidden;
   text-overflow: ellipsis;
 }
