--- a/src/components/agreement_dialog/styles.css
+++ b/src/components/agreement_dialog/styles.css
@@ -4,8 +4,14 @@
 
 .alert__dialog_title .MuiTypography-root {
   color: var(--light-color);
+  font-size: var(--default-font);
 }
 
 .alert__dialog_title .MuiDialogActions-root.MuiDialogActions-spacing {
   border-top: 1px solid rgb(179, 179, 179);
+}
+
+.alert__dialog__description.MuiTypography-body1 {
+  font-size: var(--default-font);
+  
 }
