--- a/src/views/main/contacts/contact_dialog_form/header/styles.css
+++ b/src/views/main/contacts/contact_dialog_form/header/styles.css
@@ -4,9 +4,14 @@
   text-overflow: ellipsis;
   max-width: 200px;
   overflow-x: hidden;
+  font-size: var(--default-font);
 }
 
 .contact_dialog_form_header .MuiCardHeader-action {
   display: flex;
   flex-direction: row;
+}
+
+.contact_dialog_form_header .MuiTypography-root.MuiCardHeader-subheader{
+  font-size: var(--small-font);
 }
