--- a/src/views/main/contacts/styles.css
+++ b/src/views/main/contacts/styles.css
@@ -21,10 +21,14 @@
   overflow: hidden;
   text-overflow: ellipsis;
   text-align: start;
-  font-size: 0.875rem;
+  font-size: var(--default-font);
   font-weight: 400;
   line-height: 1.43;
   letter-spacing: 0.01071em;
+}
+
+.contacts__list__item__content .MuiTypography-root.MuiTypography-subtitle1 {
+  font-size: var(--default-font);
 }
 
 .MuiAvatar-root.MuiAvatar-circle.avatar__color-1 {
