--- a/src/views/main/glossary/glossary_item/styles.css
+++ b/src/views/main/glossary/glossary_item/styles.css
@@ -1,35 +1,29 @@
-.glossary-item {
-  padding: 10px;
-}
-
-.card__header {
-  padding: 16px 16px 12px;
+.glossary_item {
+  padding: 1.5rem;
+  text-align: justify;
 }
 
 .card__content {
-  padding: 16px;
+  margin-top: 1.3rem;
 }
 
 .card__header .card__header__title {
   margin-bottom: 0.2rem;
-  font-size: 1.5rem;
+  font-size: var(--large-font);
   font-weight: 400;
   line-height: 1.334;
-  letter-spacing: 0em;
+  letter-spacing: 0;
 }
 
-.glossary-item .card__typography {
+.glossary_item .card__typography {
   font-size: var(--default-font);
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.00938em;
 }
 
-.glossary-item .card__typography.muted {
+.glossary_item .card__typography.muted {
   opacity: 0.7;
 }
 
-.glossary-item-loader {
+.glossary_item_loader {
   width: 100%;
   height: 100%;
 }
