--- a/src/views/main/home/styles.css
+++ b/src/views/main/home/styles.css
@@ -65,13 +65,21 @@
 
 .info__grid__item {
   width: 100%;
-  height: 2rem;
+  height: 2.5rem;
   background-color: var(--horizontal-menu-item);
   font-size: var(--big-font); 
   font-weight: bold;
   text-align: center;
   margin-bottom: 1rem;
   border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+.info__grid__item p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-bottom: 0;
 }
 
 @media (orientation: landscape) {
