--- a/src/views/main/notes/note_create_dialog/styles.css
+++ b/src/views/main/notes/note_create_dialog/styles.css
@@ -10,6 +10,7 @@
 
 .note_create_dialog .MuiTypography-root.MuiTypography-h6 {
   color: white;
+  font-size: var(--default-font);
 }
 
 .note_create_dialog
